# local-ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: core.py  main.py
agent/llm/: base.py  mock.py  ollama.py
openclaw/: SKILL.md  SOUL.md
tests/: test_core.py  test_dummy.py  test_llm.py
