[project]
name = "local-ai-agent"
version = "0.1.0"
description = "Local AI agent using OpenClaw + Ollama"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
